// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.networkusage.api;

option features.utf8_validation = NONE;
option java_multiple_files = true;
option java_package = "com.google.android.as.oss.networkusage.api.proto";

message FlConnectionKey {
  string feature_name = 1;
}

message HttpConnectionKey {
  string url_regex = 1;
}

message PirConnectionKey {
  string url_regex = 1;
}

message PdConnectionKey {
  string client_id = 1;
}

message AttestationConnectionKey {
  string feature_name = 1;
}

message ConnectionKey {
  oneof connection_key {
    FlConnectionKey fl_connection_key = 1;
    HttpConnectionKey http_connection_key = 2;
    PirConnectionKey pir_connection_key = 3;
    PdConnectionKey pd_connection_key = 4;
    AttestationConnectionKey attestation_connection_key = 5;
  }
}
